<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/layoutColor"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/flagship_screenshot_notify"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/screenshotSwitch"
                        android:layout_width="45dp"
                        android:layout_height="40dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="14dp"
                    android:text="@string/flagship_screenshot_notify_desc"
                    android:textColor="@color/color999"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/homeColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/flagship_revoke_notify"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/revokeRemindSwitch"
                        android:layout_width="45dp"
                        android:layout_height="40dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="14dp"
                    android:text="@string/flagship_revoke_notify_desc"
                    android:textColor="@color/color999"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
