<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <com.chat.flagship.picture.view.FlagshipPictureEditorView
        android:id="@+id/editorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <HorizontalScrollView
        android:id="@+id/colorBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#1AFFFFFF"
        android:fillViewport="true"
        android:scrollbars="none"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <View
                android:id="@+id/colorWhiteView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_white" />

            <View
                android:id="@+id/colorBlackView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_black" />

            <View
                android:id="@+id/colorRedView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_red" />

            <View
                android:id="@+id/colorYellowView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_yellow" />

            <View
                android:id="@+id/colorGreenView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_green" />

            <View
                android:id="@+id/colorBlueView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/selector_oval_blue" />

            <View
                android:id="@+id/colorPurpleView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/selector_oval_purple" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="#111111"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <LinearLayout
            android:id="@+id/textTool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/pe_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/flagship_picture_tool_text"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/graffitiTool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <ImageView
                android:id="@+id/graffitiIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/selector_draw_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/flagship_picture_tool_graffiti"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mosaicTool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <ImageView
                android:id="@+id/mosaicIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/selector_mosaic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/flagship_picture_tool_mosaic"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clipTool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/pe_clip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/flagship_picture_tool_clip"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/undoTool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/pe_revoke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/flagship_picture_tool_undo"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
